kubernetes/apps/yarr/bazarr.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: yarr-bazarr
  namespace: yarr
  labels:
    app: bazarr

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:v1.5.6-ls342
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop: [ "ALL" ]
            allowPrivilegeEscalation: true
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
            privileged: true
            runAsUser: ${userId}
            runAsGroup: ${groupId}
          ports:
            - containerPort: 6767
              name: http
              protocol: TCP
          volumeMounts:
            - name: multimedia
              mountPath: /multimedia
            - name: config
              mountPath: /config
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: config
          persistentVolumeClaim:
            claimName: yarr-bazarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: yarr-bazarr
  namespace: yarr
spec:
  ports:
    - protocol: TCP
      port: 6767
      targetPort: http
  selector:
    app: bazarr
  type: ClusterIP
