kubernetes/apps/yarr/radarr.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: yarr-radarr
  namespace: yarr
  labels:
    app: radarr

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        fsGroup: ${groupId}
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.0.4.10291-ls295
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop: [ "ALL" ]
            allowPrivilegeEscalation: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
            privileged: true
            runAsUser: ${userId}
            runAsGroup: ${groupId}
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
          volumeMounts:
            - name: multimedia
              mountPath: /multimedia
            - name: config
              mountPath: /config
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: config
          persistentVolumeClaim:
            claimName: yarr-radarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: yarr-radarr
  namespace: yarr
spec:
  ports:
    - protocol: TCP
      port: 7878
      targetPort: http
  selector:
    app: radarr
  type: ClusterIP
